name:                euler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bnarnold/euler#readme
license:             BSD3
license-file:        LICENSE
author:              Bertram Arnold
maintainer:          bertram.arnold@gmail.com
copyright:           GPL
category:            procrastination
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable euler
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
